1.0 RC6
=======
 - This release is supported on:
    - MapGuide Open Source 3.1.2 with bundled PHP 5.6
    - MapGuide Open Source 4.0 with bundled PHP 8.1

 - #201: Migrated to slim framework 3
 - Fixes to various sample apps
 - REST API changes:
    - DELETE /library/{resourcePath} -> DELETE /library/{resourcePath}/resource
       - This is to avoid ambiguous route matching
 - MgGeoJsonWriter renamed to MgReaderToGeoJsonWriter to avoid name collision with MgGeoJsonWriter in official MapGuide API
 - #154: Support getting geometry from selected features when (mappedonly=1)
 - #153: Support for select features on layer definition (for HTML/GeoJSON formats):
    - Using only properties mapped to display values
       - Specifying geometry to be included as well
    - Using display names from property mappings
 - #165: New geo-processing services available under /processing
    - Buffer
    - Difference
    - Intersection
    - Symmetric Difference
    - Union
    - Spatial Predicate Testing
       - Contains
       - Crosses
       - Disjoint
       - Equals
       - Intersects
       - Overlaps
       - Touches
       - Within
 - GeoJSON coordinate precision now defaults to 7 decimal places
 - #216: Honor transformto in published data sources if specified as a query string parameter

1.0 RC5
=======
 - #137: Verify PHP 5.6 (bundled with MGOS 3.1) compatibility
 - #132: Ensure scale ranges are outputted for raster/drawing layers
 - #145: Fix typo in utils.php
 - #144: Ensure newlines are escaped when converting XML to JSON
 - #135: Use OSM/Stamen instead of Bing Maps in all Cesium examples
 - #142, #146: Use a more roundtrip-friendly date format when serializing MgDateTime instances to GeoJSON
 - #140: Add DPI parameter for DWF/PDF plotting (though this has no effect for DWF plots, TBD which side (MapGuide or mapguide-rest) this bug is on)
 - #102: Fix boolean feature property serialization for GeoJSON
 - Updated swagger UI to v2.2.2