@@ -130,8 +130,8 @@ $app->get("/session/{session}/{mapName}.Map/image.{type}", function($req, $resp,
  *        tags={"session"},
  *          @SWG\Parameter(name="session", in="path", required=true, type="string", description="Your MapGuide Session ID"),
  *          @SWG\Parameter(name="mapName", in="path", required=true, type="string", description="The name of the runtime map"),
- *          @SWG\Parameter(name="selectioncolor", in="path", required=true, type="string", description="The selection color as HTML color string"),
- *          @SWG\Parameter(name="behavior", in="path", required=true, type="integer", description="A bitmask controlling rendering behavior. 1=Render Selection, 2=Render layers, 4=Keep Selection, 8=Render Base Layers (only for MapGuide Open Source 2.5 and above)"),
+ *          @SWG\Parameter(name="selectioncolor", in="query", required=false, type="string", description="The selection color as HTML color string"),
+ *          @SWG\Parameter(name="behavior", in="query", required=false, type="integer", description="A bitmask controlling rendering behavior. 1=Render Selection, 2=Render layers, 4=Keep Selection, 8=Render Base Layers (only for MapGuide Open Source 2.5 and above)"),
  *          @SWG\Parameter(name="x", in="query", required=true, type="integer", description="The X coordinate of the map center to render"),
  *          @SWG\Parameter(name="y", in="query", required=true, type="integer", description="The Y coordinate of the map center to render"),
  *          @SWG\Parameter(name="scale", in="query", required=true, type="number", description="The map scale to render"),
